[package]
name = "linkedin-api"
version = "0.2.1"
edition = "2021"
description = "Rust Wrapper for the LinkedIn API"
license = "AGPL-3.0-or-later"
repository = "https://github.com/philocalyst/linkedin-api" 
authors = ["Miles Wirht"] 

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
cookie_store = "0.21"
url = "2.5"
rand = "0.8"
urlencoding = "2.1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
