[package]
name = "linkedin-api"
version = "0.3.0"
edition = "2021"
description = "Rust Wrapper for the LinkedIn API"
license = "AGPL-3.0-or-later"
repository = "https://github.com/philocalyst/linkedin-api" 
authors = ["Miles Wirht"] 

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
cookie_store = "0.21"
url = { version = "2.5", features = ["serde"] }
rand = "0.8"
urlencoding = "2.1"
time = { version = "0.3.44", features = ["serde"] }
phonenumber = "0.3.7"
email_address = "0.2.9"
isolang = { version = "2.4.0", features = ["serde"] }
my_country = { version = "0.1.9", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
